# pyloess

./: LICENSE  README.md  pyproject.toml
src/pyloess/: __init__.py  loess.py
tests/: test_loess.py
