[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyloess"
version = "0.1.0"
authors = [
  { name="Naitian Zhou", email="naitian@berkeley.edu" },
]
description = "A fast implementation of the LOESS algorithm in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/naitian/pyloess"
Issues = "https://github.com/naitian/pyloess/issues"